web/modules/custom/ipu_map/css/ipu_map.css
#ipu_map {
    margin: 10px 0;
    width: 100%;
    height: auto;
}

.mapcontainer_un {
    width: 100%;
}

.mapael .map, .mapael .areaLegend {
    position: relative;
    border: 1px solid #eee;
    z-index: 3;
    width: 90%;
    margin-left: 5%;
    margin-right: 5%;
}
.mapael .areaLegend {
  border-top: 0px solid #eee;
  padding: 10px 4px;
  overflow: scroll;
}
.mapael .areaLegend svg {
  width: auto;
}
@media only screen and (max-width: 600px) {
  .mapael .map, .mapael .areaLegend {
    width: 100%;
    margin-left: 0%;
    margin-right: 0%;
  }
}

/* For all zoom buttons */
.mapael .zoomButton {
    background-color: #fff;
    border: 1px solid #ccc;
    color: #000;
    width: 15px;
    height: 15px;
    line-height: 15px;
    text-align: center;
    border-radius: 0px;
    cursor: pointer;
    position: absolute;
    top: 0;
    font-weight: bold;
    left: 10px;

    -webkit-user-select: none;
    -khtml-user-select : none;
    -moz-user-select: none;
    -o-user-select : none;
    user-select: none;
}

/* Reset Zoom button first */
.mapael .zoomReset {
    top: 10px;
}

/* Then Zoom In button */
.mapael .zoomIn {
    top: 30px;
}

/* Then Zoom Out button */
.mapael .zoomOut {
    top: 50px;
}

.mapael .mapTooltip {
    position: absolute;
    background-color: #fff;
    moz-opacity: 0.90;
    opacity: 0.90;
    filter: alpha(opacity=90);
    border-radius: 2px;
    padding: 6px;
    z-index: 1000;
    max-width: 300px;
    display: none;
    color: #343434;
}
.mapael .mapTooltip .country-name {
    font-weight: bold;
}
.mapael .mapTooltip .text {
    font-size: 0.85rem;
}

.ipu-map-parline-data {
    background-color: #d0f5ff;
}

.ipu-map-parline-data li {
    border-right: 1px solid;
}

